SIMD Intrinsics Fortran bindings/GMS_avx512_wrappers_.h

// Compile it as a C-code

    // Interoperable with corresponding Fortran derived type

        typedef struct __attribute__((align(64))) v8f64 {
                 double v[8];
        }v8f64;
        typedef struct __attribute__((align(64))) v16f32 {
                 float v[16];
	}v16f32;
        v8f64 v8f64_add_pd( v8f64 , v8f64 ) __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_sub_pd(v8f64 ,v8f64 ) __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_mul_pd(v8f64 ,v8f64 ) __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_div_pd(v8f64 ,v8f64 ) __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_ceil_pd(v8f64 )       __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_abs_pd(v8f64 )        __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_mask_abs_pd(v8f64 ,unsigned char ,v8f64 )  __attribute__((noinline))
                                                               __attribute__((hot))
				                               __attribute__((regcall))
				                               __attribute__((aligned(32)));
	v8f64 v8f64_mask_add_pd(v8f64 ,unsigned char ,v8f64 ,v8f64 ) __attribute__((noinline))
                                                                     __attribute__((hot))
				                                     __attribute__((regcall))
				                                     __attribute__((aligned(32)));
	v8f64 v8f64_maskz_add_pd(unsigned char ,v8f64 ,v8f64 ) __attribute__((noinline))
                                                               __attribute__((hot))
				                               __attribute__((regcall))
				                               __attribute__((aligned(32)));
	v8f64 v8f64_add_round_pd(v8f64 ,v8f64 ,int)               __attribute__((noinline))
                                                                  __attribute__((hot))
				                                  __attribute__((regcall))
				                                  __attribute__((aligned(32)));
	v8f64 v8f64_mask_add_round_pd(v8f64 ,unsigned char ,v8f64 ,v8f64 ,int ) __attribute__((noinline))
                                                                                __attribute__((hot))
				                                                __attribute__((regcall))
				                                                __attribute__((aligned(32)));
	v8f64 v8f64_maskz_add_round_pd(unsigned char ,v8f64 ,v8f64 ,int )  __attribute__((noinline))
                                                                           __attribute__((hot))
				                                           __attribute__((regcall))
				                                           __attribute__((aligned(32)));
	v8f64 v8f64_mask_div_pd(v8f64 ,unsigned char ,v8f64 ,v8f64 ) __attribute__((noinline))
                                                                     __attribute__((hot))
				                                     __attribute__((regcall))
				                                     __attribute__((aligned(32)));
	v8f64 v8f64_maskz_div_pd(unsigned char, v8f64, v8f64) __attribute__((noinline))
                                                              __attribute__((hot))
				                              __attribute__((regcall))
				                              __attribute__((aligned(32)));
	v8f64 v8f64_div_round_pd(v8f64, v8f64, int) __attribute__((noinline))
                                                    __attribute__((hot))
				                    __attribute__((regcall))
				                    __attribute__((aligned(32)));
	v8f64 v8f64_mask_div_round_pd(v8f64, unsigned char, v8f64, v8f64,int) __attribute__((noinline))
                                                                              __attribute__((hot))
				                                              __attribute__((regcall))
				                                              __attribute__((aligned(32)));
	v8f64 v8f64_maskz_div_round_pd(unsigned char, v8f64, v8f64, int) __attribute__((noinline))
                                                                         __attribute__((hot))
				                                         __attribute__((regcall))
				                                         __attribute__((aligned(32)));
	v8f64 v8f64_fmadd_pd(v8f64, v8f64, v8f64) __attribute__((noinline))
                                                  __attribute__((hot))
				                  __attribute__((regcall))
				                  __attribute__((aligned(32)));
	v8f64 v8f64_mask_fmadd_pd(v8f64, unsigned char, v8f64, v8f64)
	                                                          __attribute__((noinline))
                                                                  __attribute__((hot))
				                                  __attribute__((regcall))
				                                  __attribute__((aligned(32)));
	v8f64 v8f64_mask3_fmadd_pd(v8f64, v8f64, v8f64, unsigned char)
	                                                          __attribute__((noinline))
                                                                  __attribute__((hot))
				                                  __attribute__((regcall))
				                                  __attribute__((aligned(32)));